--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,4 @@
-@import './assets/scss/resets';
-@import './assets/scss/fonts';
-@import './assets/scss/vars';
+@import './assets/scss/utils';
 
 body {
   font-family: Reg, sans-serif;
@@ -12,9 +10,3 @@ body {
 
 
 
-.title {
-  font-family: Bold, sans-serif;
-  font-size: 1.5em;
-  color: black;
-  text-align: center;
-}
