--- a/src/components/profile-page/profile-page.scss
+++ b/src/components/profile-page/profile-page.scss
@@ -170,7 +170,10 @@
         flex-flow: column wrap;
         justify-content: space-evenly;
         flex-basis: 75%;
+      }
 
+      img {
+        width: 50%;
       }
 
       h3 {
